objects/TFS_AUP_Access_Control__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>TFS AUP Access Control helps to derive Profile and Role applicable to user based on Sec1 properties.</description>
    <fields>
        <fullName>Profile_Id__c</fullName>
        <description>Profile Id</description>
        <inlineHelpText>Profile Id</inlineHelpText>
        <label>Profile Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <description>Profile Name</description>
        <inlineHelpText>Profile Name</inlineHelpText>
        <label>Profile Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Dev_Name__c</fullName>
        <description>Role Developer Name</description>
        <inlineHelpText>Role Developer Name</inlineHelpText>
        <label>Role Dev Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Id__c</fullName>
        <description>Role Id</description>
        <inlineHelpText>Role Id</inlineHelpText>
        <label>Role Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>TFS AUP Access Control</label>
</CustomObject>